--- a/file/404.md
+++ b/file/404.md
@@ -1,16 +1,16 @@
 ---
 layout: page
 permalink: /file/404/index.html
-title: Lost in Translation
+title: Lost | 404
 ---
 
-## Lost in Translation🍺
+## Lost Here?
 
-The resources you accessed are being prepared.
+The resources you accessed are being prepared or you made a mistake typing the address, try again or wait for a few days/
 
-<br>If you have any question, please feel free to contact me.
+<!-- <br>If you have any question, please feel free to contact me.
 
 - First choice: hanlin.cai@ieee.org
 - Second choice: HANLIN.CAI.2021@MUMAIL.IE
 
-<br>
+<br> -->
